--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -31,7 +31,7 @@
   }
 
   &__secondary {
-    font-size: clamp(3rem, 5vw, 5.6rem);
+    font-size: clamp(2.4rem, 5vw, 5.6rem);
     color: var(--color-grey-light);
     letter-spacing: -0.15rem;
     line-height: 1.1;
